--- a/webpage/style.css
+++ b/webpage/style.css
@@ -1,22 +1,24 @@
 body {
   font: 13px sans-serif;
   font-family: "Verdana";
+  width: 1020px;
+  margin: 0px auto;
 }
 
-.axis path,
+.axis path{
+  fill: none;
+  stroke: none;
+  shape-rendering: crispEdges;
+}
+
 .axis line {
   fill: none;
-  stroke: #000;
+  stroke: none;
   shape-rendering: crispEdges;
 }
 
 .x.axis path {
   display: none;
-}
-
-.line {
-  fill: none;
-  stroke-width: 1.5px;
 }
 
 .PER {
@@ -25,4 +27,8 @@ body {
 
 .MIN{
 	stroke: steelblue;
+}
+
+
+#display{
 }
